chore: [#186126038] fix paragraph spacing

--- a/web/src/styles/base/global.scss
+++ b/web/src/styles/base/global.scss
@@ -236,6 +236,12 @@ p > a {
   color: $accent-cool-darkest !important;
 }
 
+.usa-prose p + h2,
+.usa-prose p + h3,
+.usa-prose p + h4 {
+  margin-top: 1rem !important;
+}
+
 .usa-button--unstyled:focus,
 .usa-link:focus,
 .usa-prose > a:focus,
